--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p class=" text-md-center">Segun dicha propuesta, surge tambien un nuevo reino, llamado Archaeabacteria, donde se incluyen las arqueobacterias, que son bacterias muy primitivas, capaces de vivir en ambientes extremos. De esta forma, se plantea la existencia del sexto reino de seres vivos.</p>
     <p class=" text-md-center">Todos los seres vivos, desde la mas pequena bacteria hasta la mas grande de las ballenas, se encuentran clasificados en los seis reinos y presentan las siguientes caracteristicas.</p>
     <br><br>
-    <div class="container mx-md-5 w-50">
+    <div class="container mx-xxl-5 w-75">
       <ul class="list-group text-sm-center list-group-numbered">
         <li class="list-group-item">Reino Arqueobacteria</li>
         <li class="list-group-item">Reino Monera</li>
